# rinha-compiladores

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
examples/: add.json  binary.json  binary.rinha  combination.json  curry.json  curry.rinha  error.rinha  fib.json  function.json  function.rinha  hello.json  if.json  let.json  sum.json  tuple.json  tuple.rinha
src/: error.rs  main.rs
tests/: execution.rs
