[package]
name = "rinha-compiladores"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["unbounded_depth"] }
serde_stacker = "0.1.10"

[dev-dependencies]
assert_cmd = "2.0.12"
indoc = "2.0.3"
rinha = "0.0.6"
